tests/lexer/invalid/test_malformed_number.src
float pi = 3.14.15;
float invalid = .5;
int x = 12abc;
